--- a/desafio/d012/style.css
+++ b/desafio/d012/style.css
@@ -1,5 +1,21 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Sriracha&display=swap');
+
+
+
+
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2:"Bebas Neue", sans-serif;
+    --fonte3:"Sriracha", cursive;
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -14,6 +30,7 @@ text-transform:uppercase ;
 html,body {
     min-height: 100vh;
     background-color: dark;
+    font-family: var(--fonte2);
 }
 
 header {
@@ -25,6 +42,7 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
      
 }
 header > p {
@@ -44,8 +62,11 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
-
-    
+    font-size: 3.5vw;
+    font-family: var(--fonte3);
+}
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -56,10 +77,26 @@ section.normal {
 section.imagem {
     background-color: rgb(44, 44, 44);
     color: white; 
+     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.634);
+      background-size: cover;
+      background-attachment: fixed;
 }
 section.imagem > p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.268);
+    display: inline-block;
+    background-color:  rgba(0, 0, 0, 0.481);
+    text-shadow: 1px 1px 0px black ;
+   
+
+}
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position:right center ;
+   
+
+}
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    
 }
 
 footer {
